<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_vector_compat"
            android:icon="@drawable/ic_menu_android_24dp"
            android:title="@string/Vector_Compat" />
        <item
            android:id="@+id/nav_item_glide"
            android:icon="@drawable/common_google_signin_btn_icon_light_normal"
            android:title="@string/Glide" />
        <item
            android:checkable="false"
            android:id="@+id/nav_item_day_night_theme"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/DayNight_theme" />
        <item
            android:checkable="false"
            android:id="@+id/nav_item_bottom_sheet"
            android:icon="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:title="@string/bottom_sheet" />
        <item
            android:id="@+id/nav_item_viewPager_recycler"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/ViewPager_in_RecyclerView" />
        <item
            android:id="@+id/nav_square_move_test"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Square Move Test" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
